v4.99:
- mario kart wiimm: when choosing all RMCP25 (Fun 2014-04) was
  not build (RMCP06 - RMCP24 were built "only")

v4.98:
- mario kart wiimm: when building mario kart wiimm from scratch
  use the wiimmfi mario kart patcher, not wiimmfi generic. Also
  some string changes and more detailed info on current step
- supply wit 2.29a and szs 1.35a
- always use supplied tools (don't fallback to system ones)

v4.97:
- changed IDs in the game selection menu (old A..Z for Wii, 1..9
  for ROMs / new <ID>1..<ID>..99 ; example: NSMB1, NSMB2, NSMB3)
- mkwiimm_items: support for exchanging items in Mario Kart Wii
  (your item choices are saved and can be re-used, so if you want
  to modifiy more than one Mario Kart you only have to choose the
  items once for all mods)

v4.96:
- wiimmfi/mkwiimm/kirbywii: minor improvements and fixups
- support RVLution Wii (a NewSMB Mod)
- update README.GAMEIDS
- update WinterMoon link to v1.2.3
- added gdown.pl (google-drive downloader) by circulosmeos

v4.95:
- fixed storing NewSMB mods into ${PATCHIMAGE_GAME_DIR}
- added support for exchanging first player's character
  in Kirby's Adventure Wii (using someone different than
  one of the different Kirbys may crash the game)

v4.94:
- wiimmfi generic: use correct version of wit
- wiimmfi mario kart: major code simplification and major speed-up
  (as we now symlink the old images rather than copying)
- mkwiimm support. Download and build any Mario Kart Wiimm distribution
  and patch it to use Wiimms custom server (thus patching process takes
  longer as there are two steps now). The old patchers will all work,
  because the outdated versions of the provided tools will be overriden.
- new patchimage.rc options:
	MKWIIMM_GAME_LANG	either de (german) or en (english)
		mkwiimm game language
	MKWIIMM_MSG_LANG	either de, de+ (german) or en, en+ (english)
		mkwiimm message language. de+ and en+ also change all
		other languages to german or english